.DS_Store ignored

--- a/.gitignore
+++ b/.gitignore
@@ -157,6 +157,8 @@ cython_debug/
 # frontend folder as it's not ready yet
 frontend/
 
+.DS_Store
+
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
